# Software-Raytracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Setup.ps1  makefile  run.sh  scenes.json
gui-app/: gui-app.sln
gui-app/gui-app/: MainForm.Designer.cs  MainForm.cs  Program.cs  RaylibWrapper.cs  SceneDescriptions.cs  gui-app.csproj  vec3.cs
gui-app/gui-app/Properties/: Resources.Designer.cs
raylib/: CMakeLists.txt  raylib.cc  raylib.h  raylib_types.h
raylib/core/: assertion.cc  assertion.h  concurrent_vector.h  int_types.h  logger.cc  logger.h  noncopyable.h  platform.h  random.cc  random.h  stat.h  thread_pool.cc  thread_pool.h  vec3.h
raylib/geom/: aabb.h  bvh.cc  bvh.h  cube.cc  cube.h  hit.h  scene.cc  scene.h  sphere.cc  sphere.h  static_mesh.cc  static_mesh.h  transform.cc  transform.h  triangle.cc  triangle.h
raylib/loader/: dll_loader.cc  dll_loader.h  obj_loader.cc  obj_loader.h
raylib/render/: brdf.h  camera.h  image.cc  image.h  material.cc  material.h  renderer.cc  renderer.h  texture.h
src/: CMakeLists.txt  camera.h  file.cc  file.h  hit.h  image.cc  image.h  image_loader.cc  image_loader.h  log.cc  log.h  main.cc  material.h  program_args.h  random.cc  random.cpp  random.h  ray.h  renderer.cc  renderer.h  resource_finder.cc  resource_finder.h  sphere.h  texture.cc  texture.cpp  texture.h  thread_pool.cc  thread_pool.h  transform.cpp  transform.h  type.h
src/core/: noncopyable.h  random.h  thread_pool.cc  thread_pool.h  vec.h
src/geom/: aabb.h  bvh.cc  bvh.cpp  bvh.h  cube.h  hit.cc  hit.cpp  hit.h  ray.h  sphere.cc  sphere.h  static_mesh.cc  static_mesh.cpp  static_mesh.h  transform.h  triangle.cc  triangle.cpp  triangle.h
src/loader/: image_loader.cc  image_loader.h  obj_loader.cc  obj_loader.h
src/platform/: platform.h
src/render/: brdf.h  camera.h  image.cc  image.h  material.h  renderer.cc  renderer.h  texture.h
src/shading/: brdf.h  material.cc  material.h
src/util/: assertion.h  log.cc  log.h  resource_finder.cc  resource_finder.h  stat.h
